[package]
name = "cxx-async-example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3"

[dependencies.cxx]
version = "1"
features = ["c++20"]

[build-dependencies]
cxx-build = "1"
find-folly = "0.1"
